--- a/RetryHelper/RetryHelper.csproj
+++ b/RetryHelper/RetryHelper.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>RetryHelper.NetStandard</AssemblyName>
+    <RootNamespace>RetryHelper.NetStandard</RootNamespace>
   </PropertyGroup>
 
 </Project>
